# edts4c

./: .gitignore  README.md  release.sh
backend/: Cargo.toml  Rocket.toml
backend/migrations/2020-11-21-191911_create_socle_structure/: down.sql  up.sql
backend/migrations/2020-11-28-174159_create_eleves/: down.sql  up.sql
backend/migrations/2020-11-29-191530_create_evaluations/: down.sql  up.sql
backend/migrations/2021-01-28-200040_remove_unique_rank/: down.sql  up.sql
backend/src/: db_log.rs  error.rs  main.rs  schema.rs
backend/src/db/: competencies.rs  components.rs  cycles.rs  domains.rs  eleves.rs  evaluations.rs  general_comment.rs  key_store.rs  mod.rs  report.rs  socle.rs
backend/src/routes/: competencies.rs  components.rs  domains.rs  eleves.rs  evaluations.rs  evaluations_competencies.rs  general_comment.rs  key_store.rs  mod.rs  report.rs  socle.rs
backend_tests/: test_competencies.py  test_components.py  test_domains.py
frontend/: package.json  quasar.conf.js
frontend/src/boot/: vuexerror.js
frontend/src/components/: CompetencyCycleDetail.vue  CycleCard.vue  EvalDetail.vue  EvalEnd.vue  EvalToc.vue  LabeledProgress.vue  MoveCompetency.vue  MoveComponent.vue  ReportFullCycle.vue  ReportFullSocle.vue  ReportSummaryCycle.vue
frontend/src/layouts/: EmptyLayout.vue  MainLayout.vue
frontend/src/pages/: Eleves.vue  Evaluation.vue  Evaluations.vue  Report.vue  Reports.vue  SocleCompetencies.vue  SocleCompetency.vue  SocleComponents.vue  SocleDomains.vue  cycle-color.js  status-color.js
scripts/: rebuild_eleves_competency_evaluations.py
(+32 files in other folders)
