[package]
name = "backend"
version = "0.1.0"
authors = ["olivier <olivier@kreako.fr>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crossbeam-channel = "0.5.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"
log = "0.4.11"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
